force-app/main/default/objects/QuotaType__c/QuotaType__c.object-meta.xml
<CustomObject>
    <description>Type of quota that is defined by production shop for particular sales manager</description>
    <label>Quota Type</label>
    <nameField>
        <label>Quota Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>