force-app/main/default/objects/QuotaType__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <label>Quota Type Name (Rus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>