force-app/main/default/objects/QuotaType__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Production shop that the quota relates to</description>
    <inlineHelpText>Production shop that the quota relates to</inlineHelpText>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Quotas Types</relationshipLabel>
    <relationshipName>QuotasTypes</relationshipName>
    <type>Lookup</type>
</CustomField>