force-app/main/default/objects/QuotaType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>